--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
 }
