--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_core : ^0.7.0
   provider: ^4.3.3
   flutter_spinkit: "^4.1.2"
+  google_sign_in: "^4.5.9"
 
 
   # The following adds the Cupertino Icons font to your application.
