--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^4.3.3
   flutter_spinkit: "^4.1.2"
   google_sign_in: "^4.5.9"
+  stop_watch_timer: ^0.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
