--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cloud_firestore: ^0.16.0
   firebase_core : ^0.7.0
   provider: ^4.3.3
+  flutter_launcher_icons: ^0.8.1
   flutter_spinkit: "^4.1.2"
   google_sign_in: "^4.5.9"
   stop_watch_timer: ^0.7.0
